packages/language/src/__tests__/__fixtures__/invalid/multiple-timelines.eligian
// Test fixture: Multiple timeline declarations
// Valid: Multiple timelines are now supported for complex scenarios (e.g., synchronized video+audio)

timeline "first" using video from "video1.mp4" {
  at 0s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}

// Second timeline - synchronized audio with the video
timeline "second" using audio from "audio1.mp3" {
  at 0s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
